Change range content to overflow nicely if the range width is smaller than the width of the text. This prevents range items with longer text lines from being completely hidden. Also update the stacking collision check to handle this case so that the overflowed text is not hidden by another item.

--- a/src/timeline/component/css/item.css
+++ b/src/timeline/component/css/item.css
@@ -42,7 +42,6 @@
 }
 
 .graph .item.range {
-    overflow: hidden;
     border-style: solid;
     border-width: 1px;
     border-radius: 2px;
